force-app/main/default/objects/ATS19Category__c.object
<CustomObject>
    <description>Custom Object to keep track and manage the various Categories of Adidas</description>
    <fields>
        <fullName>ATS19Description__c</fullName>
        <description>Here you can find all important information about this specific category.</description>
        <label>Description</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ATS19LogoURL__c</fullName>
        <label>Logo URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ATS19Logo__c</fullName>
        <formula>IMAGE( if( !ISBLANK(ATS19LogoURL__c),ATS19LogoURL__c,&apos;https://www.adidas.de/on/demandware.static/-/Sites-adidas-DE-Library/default/dw0cb88569/brands-athletics-image-new-ui.jpeg&apos;) ,  Name )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Logo</label>
        <type>Text</type>
    </fields>
    <label>Category</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ATS19Logo__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Category</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Categories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>